# glue-template

./: .gitignore  README.md  cspell.json  package-lock.json  package.json  pyproject.toml  setup-rye.sh
.cspell/: aws.txt  node.txt  python.txt  spark.txt
.github/workflows/: ci-glue.yml  ci-iac.yml  ci-py-tool.yml
